grammars/help/test/corpus/api.txt
====
load
====
load
---
(command
  (load))


============
load project
============
load project
---
(command
  (load
    (project)))


===========
load script
===========
load script
---
(command
  (load
    (script)))


=========
load font
=========
load font
---
(command
  (load
    (font)))


===========
unload font
===========
unload font
---
(command
  (unload
    (font)))


================================
unload font ComicSans-BoldItalic
================================
unload font ComicSans-BoldItalic
---
(command
  (unload
    (font
      (identifier))))

====
save
====
save
---
(command
  (save))


============
save project
============
save project
---
(command
  (save
    (project)))


======================
save project timestamp
======================
save project timestamp
---
(command
  (save
    (project
      (timestamp))))


=================
save project gzip
=================
save project gzip
---
(command
  (save
    (project
      (gzip))))


===========================
save project timestamp,gzip
===========================
save project timestamp,gzip
---
(command
  (save
    (project
      (timestamp)
      (gzip))))


===========================
save project gzip,timestamp
===========================
save project gzip,timestamp
---
(command
  (save
    (project
      (gzip)
      (timestamp))))


============
save script
============
save script
---
(command
  (save
    (script)))


=====================
save script timestamp
=====================
save script timestamp
---
(command
  (save
    (script
      (timestamp))))


======
export
======
export
---
(command
  (export))


============
export module
============
export module
---
(command
  (export
    (module)))


================
export module .h
================
export module .h
---
(command
  (export
    (module
      (header))))


================
export module >>
================
export module >>
---
(command
  (export
    (module
      (helper))))


============
export panel
============
export panel
---
(command
  (export
    (panel)))


================
export panel svg
================
export panel svg
---
(command
  (export
    (panel
      (svg))))


======================
export panel svg light
======================
export panel svg light
---
(command
  (export
    (panel
      (svg
        (light)))))


======================
export panel svg dark
======================
export panel svg dark
---
(command
  (export
    (panel
      (svg
        (dark)))))


==========
list fonts
==========
list fonts
---
(command
  (list
    (fonts)))


==========
list parts
==========
list parts
---
(command
  (list
    (parts)))


================
list decorations
================
list decorations
---
(command
  (list
    (decorations)))
