grammars/help/test/corpus/inputs.txt
=========
new input 
=========
new input
---
(command
  (new
    (input)))


===========
new input e
===========
new input e
---
(command
  (new
    (input
      (name))))


======================
new input e @10mm,10mm
======================
new input e @10mm,10mm
---
(command
  (new
    (input
      (name)
      (xy))))


==============================
new input "e" 10mm,10mm PJ301M
==============================
new input "e" 10mm,10mm PJ301M
---
(command
  (new
    (input
      (name)
      (xy)
      (part))))


============
delete input
============
delete input
---
(command
  (delete
    (input)))


===============
delete input v1
===============
delete input v1
---
(command
  (delete
    (input
      (identifier))))

        
