grammars/help/test/corpus/labels.txt
=========
new label
=========
new label
---
(command
  (new
    (label)))

=================
new label "lorem"
=================
new label "lorem"
---
(command
  (new
    (label
      (string))))


============================
new label "lorem" @10mm,10mm
============================
new label "lorem" @10mm,10mm
---
(command
  (new
    (label
      (string
        (absolute)))))
        
===========================
new label "lorem" 10mm,10mm
===========================
new label "lorem" 10mm,10mm
---
(command
  (new
    (label
      (string
        (relative)))))


===============================
new label "lorem" centre,middle
===============================
new label "lorem" centre,middle
---
(command
  (new
    (label
      (string
        (geometry)))))


=======================================
new label "lorem" 10mm,10mm "Lato-Bold"
=======================================
new label "lorem" 10mm,10mm "Lato-Bold"
---
(command
  (new
    (label
      (string
        (relative
          (font))))))


============================================
new label "lorem" 10mm,10mm "Lato-Bold" 14pt
============================================
new label "lorem" 10mm,10mm "Lato-Bold" 14pt
---
(command
  (new
    (label
      (string
        (relative
          (font
            (fontsize)))))))


===================================================
new label "lorem" 10mm,10mm "Lato-Bold" 14pt centre
===================================================
new label "lorem" 10mm,10mm "Lato-Bold" 14pt centre
---
(command
  (new
    (label
      (string
        (relative
          (font
            (fontsize
              (halign))))))))


============================================================
new label "lorem" 10mm,10mm "Lato-Bold" 14pt centre,baseline
============================================================
new label "lorem" 10mm,10mm "Lato-Bold" 14pt centre,baseline
---
(command
  (new
    (label
      (string
        (relative
          (font
            (fontsize
              (halign
                (valign)))))))))


====================================================================
new label "lorem" 10mm,10mm "Lato-Bold" 14pt centre,baseline #ff0000
====================================================================
new label "lorem" 10mm,10mm "Lato-Bold" 14pt centre,baseline #ff0000
---
(command
  (new
    (label
      (string
        (relative
          (font
            (fontsize
              (halign
                (valign
                  (colour))))))))))
