grammars/help/test/corpus/lights.txt
=========
new light 
=========
new light
---
(command
  (new
    (light)))

============
new light on
============
new light n
---
(command
  (new
    (light
      (name))))


=======================
new light on @10mm,10mm
=======================
new light on @10mm,10mm
---
(command
  (new
    (light
      (name)
      (xy))))


===============================
new light "on" 10mm,10mm PJ301M
===============================
new light "on" 10mm,10mm PJ301M
---
(command
  (new
    (light
      (name)
      (xy)
      (part))))


============
delete light
============
delete light
---
(command
  (delete
    (light)))


===============
delete light l1
===============
delete light l1
---
(command
  (delete
    (light
      (identifier))))

        
=========
set light
=========
set light
---
(command
  (set
    (light)))


============
set light l1
============
set light l1
---
(command
  (set
    (light
      (identifier))))


======================
set light l1 name 'ON'
======================
set light p1 name 'ON'
---
(command
  (set
    (light
      (identifier))
    (name)))


===================
set light l1 x 10mm
===================
set light l1 x 10mm
---
(command
  (set
    (light
      (identifier))
    (x)))


===================
set light l1 y 10mm
===================
set light l1 y 10mm
---
(command
  (set
    (light
      (identifier))
    (y)))


=========================
set light l1 xy 10mm,10mm
=========================
set light l1 xy 10mm,10mm
---
(command
  (set
    (light
      (identifier))
    (xy)))


=========================
set light 'ON' part 'LED'
=========================
set light 'ON' part 'LED'
---
(command
  (set
    (light
      (identifier))
    (part)))


============================
set light "ON" part 'REDLED'
============================
set light "ON" part 'REDLED'
---
(command
  (set
    (light
      (identifier))
    (part)))
