grammars/help/test/corpus/origin.txt
==========
set origin
==========
set origin
---
(source_file
  (set
    (origin)))


============
set origin @
============
set origin @
---
(source_file
  (set
    (origin
      (absolute))))


================
set origin @10mm
================
set origin @10mm
---
(source_file
  (set
    (origin
      (absolute
        (x)))))


=================
set origin @10mm,
=================
set origin @10mm,
---
(source_file
  (set
    (origin
      (absolute
        (x)))))


=====================
set origin @10mm,10mm
=====================
set origin @10mm,10mm
---
(source_file
  (set
    (origin
      (absolute
        (x)
        (y)))))


===============
set origin left
===============
set origin left
---
(source_file
  (set
    (origin
      (x
        (reference)))))


================
set origin left,
================
set origin left,
---
(source_file
  (set
    (origin
      (x
        (reference)))))


===================
set origin left,top
===================
set origin left,top
---
(source_file
  (set
    (origin
      (x
        (reference))
      (y
        (reference)))))


==============
set origin top
==============
set origin top
---
(source_file
  (set
    (origin
      (y
        (reference)))))


===============
set origin top,
===============
set origin top,
---
(source_file
  (set
    (origin
      (y
        (reference)))))


===================
set origin top,left
===================
set origin top,left
---
(source_file
  (set
    (origin
      (y
        (reference))
      (x
        (reference)))))
