grammars/help/test/corpus/outputs.txt
=========
new output 
=========
new output
---
(command
  (new
    (output)))


=============
delete output
=============
delete output
---
(command
  (delete
    (output)))


================
delete output v1
================
delete output v1
---
(command
  (delete
    (output
      (identifier))))


==========
set output
==========
set output
---
(command
  (set
    (output)))


=============
set output o1
=============
set output o1
---
(command
  (set
    (output
      (identifier))))


=========================
set output o1 name 'left'
=========================
set output o1 name 'left'
---
(command
  (set
    (output
      (identifier))
    (name)))


====================
set output o1 x 10mm
====================
set output o1 x 10mm
---
(command
  (set
    (output
      (identifier))
    (x)))


====================
set output o1 y 10mm
====================
set output o1 y 10mm
---
(command
  (set
    (output
      (identifier))
    (y)))


==========================
set output o1 xy 10mm,10mm
==========================
set output o1 xy 10mm,10mm
---
(command
  (set
    (output
      (identifier))
    (xy)))


===============================
set output 'left' part 'PJ301M'
===============================
set output 'left' part 'PJ301M'
---
(command
  (set
    (output
      (identifier))
    (part)))


===============================
set output "left" part 'PJ301M'
===============================
set output "left" part 'PJ301M'
---
(command
  (set
    (output
      (identifier))
    (part)))
